# Paleta

./: README.md  meson.build
builddir/: .ninja_log  build.ninja  compile_commands.json  config.h
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
data/: assets.gresource.xml  com.github.jeysonflores.lightning.desktop  com.github.jeysonflores.lightning.gschema.xml  com.github.jeysonflores.paleta.desktop  com.github.jeysonflores.paleta.gschema.xml  meson.build  style-dark.css  style.css
src/: ExtRGBA.vala  Lightning.vala  MainWindow.vala  Paleta.vala
src/Services/: Settings.vala
src/Views/: ColorPickerView.vala  ContrastView.vala
src/Widgets/: ColorButton.vala  FormatStack.vala  Picker.vala
